Fixing Workspace icon in not collapsed mode

--- a/sidebar-expand-on-hover/chrome.css
+++ b/sidebar-expand-on-hover/chrome.css
@@ -133,6 +133,9 @@
         .zen-current-workspace-indicator {
             display: none !important;
         }
+        hbox#zen-sidebar-top-buttons-customization-target {
+          display: none !important;
+        }
     }
 
     #titlebar {
